--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>P5 Canvas</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>rain</title>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/addons/p5.sound.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script>
 
-        <script defer src="./scripts/sketch.js"></script>
-        <script src="./scripts/rain.js"></script>
+    <script defer src="./scripts/sketch.js"></script>
+    <script src="./scripts/rain.js"></script>
 
-        <link rel="stylesheet" href="./styles/index.css">
-    </head>
-    <body>
-    </body>
+    <link rel="stylesheet" href="./styles/index.css" />
+  </head>
+  <body>
+    <p id="credit">nafismustofa/rain</p>
+  </body>
 </html>
